--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "@types/lodash": "4.14.202",
     "@types/node": "20.11.19",
     "@types/nunjucks": "3.2.6",
-    "@types/serialize-javascript": "5.0.4",
     "@types/serve-favicon": "2.5.7",
     "@types/ua-parser-js": "0.7.39",
     "@types/webpack": "5.28.5",
@@ -153,6 +152,7 @@
     "express": "4.18.2",
     "helmet": "7.1.0",
     "js-cookie": "3.0.5",
+    "json-stringify-safe": "5.0.1",
     "lodash": "4.17.21",
     "lru-cache": "10.2.0",
     "nunjucks": "3.2.4",
@@ -162,7 +162,6 @@
     "pino-http": "9.0.0",
     "purgecss": "5.0.0",
     "redis": "4.6.13",
-    "serialize-javascript": "6.0.2",
     "serve-favicon": "2.5.0",
     "surenv": "1.1.0",
     "ua-parser-js": "1.0.37",
